client/css/style.css
/*------------------------------------------------------------------
[Master Stylesheet]

Project:	Lattes - One page multi purpose page
Version:	1.0
Last change:	17/08/2015 [...]
Designed by:	MOOZ Themes / www.MOOZthemes.com
Primary use:	One page

Definitely modified by Paul Durivage <pauldurivage@gmail.com> https://github.com/angstwad

[Table of contents]

1. General
2. Header
3. Navigation
4. Sections
5. Footer
6. Components

[Color codes]

Buttons, etc:	#726FB9 (blue)
hover color:	#a61522 (yellow)
dare-to-listen red: #a61522
-------------------------------------------------------------------*/
/*--------------------
Import Google Fonts
--------------------*/
/* main font for menu. */
@import url('http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
/* font for headings, text, tags */
@import url('http://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800');
@import url('http://fonts.googleapis.com/css?family=Playfair+Display:400italic&subset=latin,latin-ext');

/*--------------------
1. General
--------------------*/

body {
    margin: 0px;
    font-family: "Open Sans", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 300;
    letter-spacing: 0.4px;
    font-family: "Open Sans", sans-serif;
    color: #232323;
}

p {
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    font-weight: 300;
    line-height: 23px;
    letter-spacing: 0.2px;
    color: #797979;
}

a:hover, a:focus, a:active, a.active {
    color: #a61522;
}

a, a:hover, a:focus, a:active, a.active {
    outline: 0;
}

::selection {
    text-shadow: none;
    background: #a61522;
}

@media (min-width: 768px) {
    section {
        padding: 150px 0;
    }
}

section {
    padding: 70px 0;
}

/*--------------------
2. Navigation
--------------------*/

.navbar-default {
    background-color: #222;
    border-color: transparent;
}

.navbar-default .navbar-brand {
    color: #fff;
    font-family: "Montserrat", sans-serif;
    padding: 0px;
}

.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:active, .navbar-default .navbar-brand.active {
    color: #fec503
}

.navbar-default .navbar-collapse {
    border-color: rgba(255, 255, 255, .02)
}

.navbar-default .navbar-toggle {
    background-color: #a61522;
    border-color: #7d0209;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
    background-color: #a61522
}

.navbar-default .nav li a {
    font-family: "Roboto", sans-serif;
    text-transform: uppercase;
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff
}

.navbar-default .nav li a:hover, .navbar-default .nav li a:focus {
    color: #a61522;
    outline: 0
}

.navbar-default .navbar-nav > .active > a {
    border-radius: 0;
    color: #fff;
    background-color: #a61522
}

.navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
    color: #fff;
    background-color: #fec503
}

@media (min-width: 768px) {
    .navbar-default {
        background-color: transparent;
        padding: 25px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
        border: 0;
        min-height: 120px;
    }

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s
    }

    .navbar-default .navbar-nav > .active > a {
        border-radius: 3px
    }

    .navbar-default.navbar-shrink {
        background-color: #222;
        padding: 10px 0;
        min-height: 105px;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em
    }
}

@media (max-width: 768px) {
    .navbar {
        min-height: 60px;
    }

    .navbar-brand > img {
        max-width: 100%;
        vertical-align: middle;
        display: block;
        margin: 0;
        zoom: 65%;
    }
}

@media (max-width: 414px) {
    a.navbar-brand {
        max-width: 65%;
    }
}

/*--------------------
3. Header
--------------------*/

header {
    background-image: none;
    background-color: #000;
    background-repeat: none;
    background-attachment: scroll;
    background-position: center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    color: #fff;
}

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
    max-width: 45%;
}

@media (min-width: 768px) {
    header .intro-text {
        padding-top: 160px;
        padding-bottom: 200px;
    }
}

/*header .intro-text .intro-lead-in {*/
/*font-family: "Playfair Display",sans-serif;*/
/*font-style: italic;*/
/*font-size: 22px;*/
/*line-height: 22px;*/
/*margin-bottom: 25px;*/
/*}*/

/*@media (min-width: 768px) {*/
/*header .intro-text .intro-lead-in {*/
/*font-family: "Playfair Display",sans-serif;*/
/*font-style: italic;*/
/*font-size: 40px;*/
/*line-height: 40px;*/
/*margin-bottom: 25px;*/
/*background-position;*/
/*}*/
/*}*/

header .intro-text .intro-lead {
    /*font-style: oblique;*/
    font-size: 18px;
    line-height: 18px;
    margin-bottom: 40px;
}

@media (min-width: 768px) {
    header .intro-text .intro-lead {
        /*font-style: oblique;*/
        font-size: 24px;
        line-height: 24px;
        margin-bottom: 40px;
    }
}

header .intro-text .intro-lead-action {
    text-transform: uppercase;
    font-style: oblique;
    font-weight: bold;
    font-size: 22px;
    line-height: 22px;
    margin-bottom: 50px;
}

@media (min-width: 768px) {
    header .intro-text .intro-lead-action {
        text-transform: uppercase;
        font-style: oblique;
        font-weight: bold;
        font-size: 24px;
        line-height: 24px;
        margin-top: 20px;
        margin-bottom: 50px;
    }
}
/* ... */

